# ORM

./: CMakeLists.txt  main.cpp
.github/workflows/: releasy.yml
include/: Database.h  MySQLDatabase.h  SQLiteDatabase.h
src/: MySQLDatabase.cpp  SQLiteDatabase.cpp  main.cpp
